modules/gdscript/tests/scripts/analyzer/errors/typed_dictionary_assignment.gd
func test():
	final dict: Dictionary[int, int] = { "Hello": "World" }
